syntax = "proto3";

package lotecs.auth.grpc;

option java_multiple_files = true;
option java_package = "com.lotecs.auth.grpc";
option java_outer_classname = "AuthServiceProto";

import "google/protobuf/struct.proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

  rpc GetUserById(GetUserByIdRequest) returns (UserResponse);
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (UserResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);

  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

  rpc CheckPermission(PermissionCheckRequest) returns (PermissionCheckResponse);

  // Role Management
  rpc AssignRole(AssignRoleRequest) returns (AssignRoleResponse);
  rpc AssignRoles(AssignRolesRequest) returns (AssignRolesResponse);
  rpc RevokeRole(RevokeRoleRequest) returns (RevokeRoleResponse);

  // User Status Management
  rpc LockUser(LockUserRequest) returns (LockUserResponse);
  rpc UnlockUser(UnlockUserRequest) returns (UnlockUserResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string tenant_id = 3;
  string ip_address = 4;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int32 expires_in = 3;
  UserInfo user = 4;
  string sso_type = 5;
  google.protobuf.Struct additional_data = 6;
}

message LogoutRequest {
  string access_token = 1;
  string user_id = 2;
  string tenant_id = 3;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int32 expires_in = 3;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  UserInfo user = 2;
  string error_message = 3;
}

message GetUserByIdRequest {
  string user_id = 1;
  string tenant_id = 2;
}

message GetUserByUsernameRequest {
  string username = 1;
  string tenant_id = 2;
}

message GetUsersRequest {
  string tenant_id = 1;
  int32 page = 2;
  int32 size = 3;
}

message GetUsersResponse {
  repeated UserInfo users = 1;
  int64 total = 2;
}

message CreateUserRequest {
  string tenant_id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  string full_name = 5;
  repeated string roles = 6;
}

message UpdateUserRequest {
  string user_id = 1;
  string tenant_id = 2;
  string email = 3;
  string full_name = 4;
  string status = 5;
}

message DeleteUserRequest {
  string user_id = 1;
  string tenant_id = 2;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message UserResponse {
  UserInfo user = 1;
  string error_message = 2;
}

message UserInfo {
  string user_id = 1;
  string tenant_id = 2;
  string username = 3;
  string email = 4;
  string full_name = 5;
  string status = 6;
  repeated string roles = 7;
  repeated string permissions = 8;
  string external_user_id = 9;
  string external_system = 10;
}

message PermissionCheckRequest {
  string user_id = 1;
  string tenant_id = 2;
  string permission_code = 3;
}

message PermissionCheckResponse {
  bool has_permission = 1;
}

// Role Management Messages
message AssignRoleRequest {
  string user_id = 1;
  string tenant_id = 2;
  string role_id = 3;
  string status_code = 4;
  string valid_from = 5;
  string valid_until = 6;
  string assigned_by = 7;
}

message AssignRoleResponse {
  bool success = 1;
  string message = 2;
}

message AssignRolesRequest {
  string user_id = 1;
  string tenant_id = 2;
  repeated string role_ids = 3;
  string status_code = 4;
  string valid_from = 5;
  string valid_until = 6;
  string assigned_by = 7;
}

message AssignRolesResponse {
  bool success = 1;
  string message = 2;
  int32 assigned_count = 3;
}

message RevokeRoleRequest {
  string user_id = 1;
  string tenant_id = 2;
  string role_id = 3;
  string revoked_by = 4;
}

message RevokeRoleResponse {
  bool success = 1;
  string message = 2;
}

// User Status Management Messages
message LockUserRequest {
  string user_id = 1;
  string tenant_id = 2;
  string reason = 3;
  string locked_by = 4;
}

message LockUserResponse {
  bool success = 1;
  string message = 2;
}

message UnlockUserRequest {
  string user_id = 1;
  string tenant_id = 2;
  string unlocked_by = 3;
}

message UnlockUserResponse {
  bool success = 1;
  string message = 2;
}

message ChangePasswordRequest {
  string user_id = 1;
  string tenant_id = 2;
  string current_password = 3;
  string new_password = 4;
}

message ChangePasswordResponse {
  bool success = 1;
  string message = 2;
}

// Tenant Service
service TenantService {
  rpc GetTenant(GetTenantRequest) returns (TenantResponse);
  rpc GetTenantBySiteCode(GetTenantBySiteCodeRequest) returns (TenantResponse);
  rpc ListTenants(ListTenantsRequest) returns (ListTenantsResponse);
  rpc ListActiveTenants(ListActiveTenantsRequest) returns (ListTenantsResponse);
  rpc CreateTenant(CreateTenantRequest) returns (TenantResponse);
  rpc UpdateTenant(UpdateTenantRequest) returns (TenantResponse);
  rpc DeleteTenant(DeleteTenantRequest) returns (DeleteTenantResponse);
  rpc PublishTenant(PublishTenantRequest) returns (TenantResponse);
  rpc UnpublishTenant(UnpublishTenantRequest) returns (TenantResponse);
}

message GetTenantRequest {
  string tenant_id = 1;
}

message GetTenantBySiteCodeRequest {
  string site_code = 1;
}

message ListTenantsRequest {}

message ListActiveTenantsRequest {}

message ListTenantsResponse {
  repeated TenantInfo tenants = 1;
}

message CreateTenantRequest {
  string site_name = 1;
  string site_code = 2;
  string description = 3;
  string primary_domain = 4;
  string additional_domains = 5;
  string site_title = 6;
  string site_description = 7;
  string theme_name = 8;
  string default_language = 9;
  string timezone = 10;
  string owner_email = 11;
  string admin_email = 12;
  string contact_phone = 13;
  string parent_tenant_id = 14;
  int32 site_level = 15;
  int32 max_content_items = 16;
  int32 max_storage_mb = 17;
  int32 max_users = 18;
  string features = 19;
  string settings = 20;
  string created_by = 21;
}

message UpdateTenantRequest {
  string tenant_id = 1;
  string site_name = 2;
  string description = 3;
  string primary_domain = 4;
  string additional_domains = 5;
  string site_title = 6;
  string site_description = 7;
  string theme_name = 8;
  string default_language = 9;
  string timezone = 10;
  string owner_email = 11;
  string admin_email = 12;
  string contact_phone = 13;
  int32 max_content_items = 14;
  int32 max_storage_mb = 15;
  int32 max_users = 16;
  string features = 17;
  string settings = 18;
  string updated_by = 19;
}

message DeleteTenantRequest {
  string tenant_id = 1;
}

message DeleteTenantResponse {
  bool success = 1;
  string message = 2;
}

message PublishTenantRequest {
  string tenant_id = 1;
  string updated_by = 2;
}

message UnpublishTenantRequest {
  string tenant_id = 1;
  string reason = 2;
  string updated_by = 3;
}

message TenantResponse {
  TenantInfo tenant = 1;
  string error_message = 2;
}

message TenantInfo {
  string tenant_id = 1;
  string site_name = 2;
  string site_code = 3;
  string primary_domain = 4;
  string additional_domains = 5;
  string description = 6;
  string site_title = 7;
  string site_description = 8;
  string theme_name = 9;
  string default_language = 10;
  string timezone = 11;
  string owner_email = 12;
  string admin_email = 13;
  string contact_phone = 14;
  string parent_tenant_id = 15;
  int32 site_level = 16;
  int32 max_content_items = 17;
  int32 max_storage_mb = 18;
  int32 max_users = 19;
  string features = 20;
  string settings = 21;
  string status = 22;
  string published_at = 23;
  string unpublished_at = 24;
  string subscription_plan_code = 25;
  string plan_start_date = 26;
  string plan_end_date = 27;
  int64 version = 28;
  string created_by = 29;
  string created_at = 30;
  string updated_by = 31;
  string updated_at = 32;
}

// RoleStatus Service
service RoleStatusService {
  rpc GetRoleStatus(GetRoleStatusRequest) returns (RoleStatusResponse);
  rpc ListRoleStatuses(ListRoleStatusesRequest) returns (ListRoleStatusesResponse);
  rpc ListActiveRoleStatuses(ListActiveRoleStatusesRequest) returns (ListRoleStatusesResponse);
  rpc ListRoleStatusesByCategory(ListRoleStatusesByCategoryRequest) returns (ListRoleStatusesResponse);
  rpc CreateRoleStatus(CreateRoleStatusRequest) returns (RoleStatusResponse);
  rpc UpdateRoleStatus(UpdateRoleStatusRequest) returns (RoleStatusResponse);
  rpc DeleteRoleStatus(DeleteRoleStatusRequest) returns (DeleteRoleStatusResponse);
}

message GetRoleStatusRequest {
  string status_code = 1;
}

message ListRoleStatusesRequest {}

message ListActiveRoleStatusesRequest {}

message ListRoleStatusesByCategoryRequest {
  string role_category = 1;
}

message ListRoleStatusesResponse {
  repeated RoleStatusInfo role_statuses = 1;
}

message CreateRoleStatusRequest {
  string status_code = 1;
  string status_name = 2;
  string role_category = 3;
  string description = 4;
  bool is_active = 5;
  int32 sort_order = 6;
  bool is_default = 7;
  string created_by = 8;
}

message UpdateRoleStatusRequest {
  string status_code = 1;
  string status_name = 2;
  string role_category = 3;
  string description = 4;
  bool is_active = 5;
  int32 sort_order = 6;
  bool is_default = 7;
  string updated_by = 8;
}

message DeleteRoleStatusRequest {
  string status_code = 1;
}

message DeleteRoleStatusResponse {
  bool success = 1;
  string message = 2;
}

message RoleStatusResponse {
  RoleStatusInfo role_status = 1;
  string error_message = 2;
}

message RoleStatusInfo {
  int64 id = 1;
  string status_code = 2;
  string status_name = 3;
  string role_category = 4;
  string description = 5;
  bool is_active = 6;
  int32 sort_order = 7;
  bool is_default = 8;
  string created_by = 9;
  string created_at = 10;
  string updated_by = 11;
  string updated_at = 12;
}

// Organization Service (Relay Sync)
service OrganizationService {
  rpc GetOrganization(GetOrganizationRequest) returns (OrganizationResponse);
  rpc ListOrganizations(ListOrganizationsRequest) returns (ListOrganizationsResponse);
  rpc ListActiveOrganizations(ListActiveOrganizationsRequest) returns (ListOrganizationsResponse);
  rpc ListRootOrganizations(ListRootOrganizationsRequest) returns (ListOrganizationsResponse);
  rpc ListChildOrganizations(ListChildOrganizationsRequest) returns (ListOrganizationsResponse);
  rpc SyncOrganization(SyncOrganizationRequest) returns (OrganizationResponse);
  rpc DeleteOrganization(DeleteOrganizationRequest) returns (DeleteOrganizationResponse);
}

message GetOrganizationRequest {
  string organization_id = 1;
}

message ListOrganizationsRequest {
  string tenant_id = 1;
}

message ListActiveOrganizationsRequest {
  string tenant_id = 1;
}

message ListRootOrganizationsRequest {
  string tenant_id = 1;
}

message ListChildOrganizationsRequest {
  string parent_organization_id = 1;
}

message ListOrganizationsResponse {
  repeated OrganizationInfo organizations = 1;
}

message SyncOrganizationRequest {
  string tenant_id = 1;
  string organization_id = 2;
  string organization_code = 3;
  string organization_name = 4;
  string organization_type = 5;
  string parent_organization_id = 6;
  int32 org_level = 7;
  int32 display_order = 8;
  string description = 9;
  bool active = 10;
  string sync_by = 11;
}

message DeleteOrganizationRequest {
  string organization_id = 1;
}

message DeleteOrganizationResponse {
  bool success = 1;
  string message = 2;
}

message OrganizationResponse {
  OrganizationInfo organization = 1;
  string error_message = 2;
}

message OrganizationInfo {
  int64 id = 1;
  string tenant_id = 2;
  string organization_id = 3;
  string organization_code = 4;
  string organization_name = 5;
  string organization_type = 6;
  string parent_organization_id = 7;
  int32 org_level = 8;
  int32 display_order = 9;
  string description = 10;
  bool active = 11;
  string created_by = 12;
  string created_at = 13;
  string updated_by = 14;
  string updated_at = 15;
}

// UserOrganization Service (Relay Sync)
service UserOrganizationService {
  rpc GetUserOrganizations(GetUserOrganizationsRequest) returns (ListUserOrganizationsResponse);
  rpc GetActiveUserOrganizations(GetActiveUserOrganizationsRequest) returns (ListUserOrganizationsResponse);
  rpc GetPrimaryUserOrganization(GetPrimaryUserOrganizationRequest) returns (UserOrganizationResponse);
  rpc GetOrganizationUsers(GetOrganizationUsersRequest) returns (ListUserOrganizationsResponse);
  rpc GetActiveOrganizationUsers(GetActiveOrganizationUsersRequest) returns (ListUserOrganizationsResponse);
  rpc SyncUserOrganization(SyncUserOrganizationRequest) returns (UserOrganizationResponse);
  rpc DeleteUserOrganization(DeleteUserOrganizationRequest) returns (DeleteUserOrganizationResponse);
  rpc DeleteAllUserOrganizations(DeleteAllUserOrganizationsRequest) returns (DeleteUserOrganizationResponse);
}

message GetUserOrganizationsRequest {
  string user_id = 1;
}

message GetActiveUserOrganizationsRequest {
  string user_id = 1;
}

message GetPrimaryUserOrganizationRequest {
  string user_id = 1;
}

message GetOrganizationUsersRequest {
  string organization_id = 1;
}

message GetActiveOrganizationUsersRequest {
  string organization_id = 1;
}

message ListUserOrganizationsResponse {
  repeated UserOrganizationInfo user_organizations = 1;
}

message SyncUserOrganizationRequest {
  string tenant_id = 1;
  string user_id = 2;
  string organization_id = 3;
  string role_id = 4;
  bool is_primary = 5;
  string position = 6;
  string start_date = 7;
  string end_date = 8;
  bool active = 9;
  string sync_by = 10;
}

message DeleteUserOrganizationRequest {
  int64 id = 1;
}

message DeleteAllUserOrganizationsRequest {
  string user_id = 1;
}

message DeleteUserOrganizationResponse {
  bool success = 1;
  string message = 2;
}

message UserOrganizationResponse {
  UserOrganizationInfo user_organization = 1;
  string error_message = 2;
}

message UserOrganizationInfo {
  int64 id = 1;
  string tenant_id = 2;
  string user_id = 3;
  string organization_id = 4;
  string role_id = 5;
  bool is_primary = 6;
  string position = 7;
  string start_date = 8;
  string end_date = 9;
  bool active = 10;
  string created_by = 11;
  string created_at = 12;
  string updated_by = 13;
  string updated_at = 14;
}

// Role Service (Role CRUD)
service RoleService {
  rpc GetRole(GetRoleRequest) returns (RoleResponse);
  rpc GetRoleByName(GetRoleByNameRequest) returns (RoleResponse);
  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse);
  rpc CreateRole(CreateRoleRequest) returns (RoleResponse);
  rpc UpdateRole(UpdateRoleRequest) returns (RoleResponse);
  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse);
  rpc GetUserRoles(GetUserRolesRequest) returns (ListRolesResponse);
}

message GetRoleRequest {
  string role_id = 1;
  string tenant_id = 2;
}

message GetRoleByNameRequest {
  string role_name = 1;
  string tenant_id = 2;
}

message ListRolesRequest {
  string tenant_id = 1;
}

message ListRolesResponse {
  repeated RoleInfo roles = 1;
}

message CreateRoleRequest {
  string tenant_id = 1;
  string role_name = 2;
  string display_name = 3;
  string description = 4;
  int32 priority = 5;
  string created_by = 6;
}

message UpdateRoleRequest {
  string role_id = 1;
  string tenant_id = 2;
  string display_name = 3;
  string description = 4;
  int32 priority = 5;
  string updated_by = 6;
}

message DeleteRoleRequest {
  string role_id = 1;
  string tenant_id = 2;
}

message DeleteRoleResponse {
  bool success = 1;
  string message = 2;
}

message RoleResponse {
  RoleInfo role = 1;
  string error_message = 2;
}

message GetUserRolesRequest {
  string user_id = 1;
  string tenant_id = 2;
}

message RoleInfo {
  string role_id = 1;
  string tenant_id = 2;
  string role_name = 3;
  string display_name = 4;
  string description = 5;
  int32 priority = 6;
  string created_by = 7;
  string created_at = 8;
  string updated_by = 9;
  string updated_at = 10;
}

// Permission Service (Permission CRUD and Role-Permission mapping)
service PermissionService {
  rpc GetPermission(GetPermissionRequest) returns (PermissionResponse);
  rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse);
  rpc CreatePermission(CreatePermissionRequest) returns (PermissionResponse);
  rpc UpdatePermission(UpdatePermissionRequest) returns (PermissionResponse);
  rpc DeletePermission(DeletePermissionRequest) returns (DeletePermissionResponse);
  rpc GetRolePermissions(GetRolePermissionsRequest) returns (ListPermissionsResponse);
  rpc AssignPermissionsToRole(AssignPermissionsToRoleRequest) returns (AssignPermissionsToRoleResponse);
  rpc RevokePermissionFromRole(RevokePermissionFromRoleRequest) returns (RevokePermissionFromRoleResponse);
}

message GetPermissionRequest {
  string permission_id = 1;
  string tenant_id = 2;
}

message ListPermissionsRequest {
  string tenant_id = 1;
}

message ListPermissionsResponse {
  repeated PermissionInfo permissions = 1;
}

message CreatePermissionRequest {
  string tenant_id = 1;
  string permission_code = 2;
  string permission_name = 3;
  string description = 4;
  string resource_type = 5;
  string action = 6;
  string created_by = 7;
}

message UpdatePermissionRequest {
  string permission_id = 1;
  string tenant_id = 2;
  string permission_name = 3;
  string description = 4;
  string resource_type = 5;
  string action = 6;
  string updated_by = 7;
}

message DeletePermissionRequest {
  string permission_id = 1;
  string tenant_id = 2;
}

message DeletePermissionResponse {
  bool success = 1;
  string message = 2;
}

message PermissionResponse {
  PermissionInfo permission = 1;
  string error_message = 2;
}

message GetRolePermissionsRequest {
  string role_id = 1;
  string tenant_id = 2;
}

message AssignPermissionsToRoleRequest {
  string role_id = 1;
  string tenant_id = 2;
  repeated string permission_ids = 3;
  string assigned_by = 4;
}

message AssignPermissionsToRoleResponse {
  bool success = 1;
  string message = 2;
  int32 assigned_count = 3;
}

message RevokePermissionFromRoleRequest {
  string role_id = 1;
  string tenant_id = 2;
  string permission_id = 3;
  string revoked_by = 4;
}

message RevokePermissionFromRoleResponse {
  bool success = 1;
  string message = 2;
}

message PermissionInfo {
  string permission_id = 1;
  string tenant_id = 2;
  string permission_code = 3;
  string permission_name = 4;
  string description = 5;
  string resource_type = 6;
  string action = 7;
  string created_by = 8;
  string created_at = 9;
  string updated_by = 10;
  string updated_at = 11;
}
